css/style.css
body {
    font-family: monospace;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-image: url(../img/nyancat.gif);
    
}

button {
    font-family: monospace;
}

a {
    text-decoration: none;
}

a, .header-bottom-text {
    color: #E5E7EB;
}
.text, .logo, .header-top-text {
    color: #f9faf9;
}

.logo-img {
    width: 5rem;
    border-radius: 50%;
}

.links {
    display: flex;
    justify-content: space-around;
    gap: 2rem;
}

.information {
    display: flex;
    justify-content: center;
    font-size: 36px;
    font-weight: bolder;
    color: #f9faf9
}

.header-bottom-image {
    width: 10rem;
    border: solid #1F2937;
}

.header-text {
    display: flex;
    flex-direction: column;
}

.header-top-text {
    font-size: 48px;
    margin-bottom: -0.5rem;
}

.header {
    display: flex;
    flex-direction: column;
    background-color: #1F2937;
    margin: -0.5rem;
    align-items: center;
}



.top-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 75rem;
    padding-top: 1rem;
}

.bottom-header {
    display: flex;
    flex-direction: row;
    width: 75rem;
    justify-content: flex-start;
    padding-bottom: 3rem;
    gap: 2rem;
}

.footer {
    display: flex;
    flex-grow: 1;
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    color: #f9faf9;
    padding: 1.25rem;
    margin: -0.5rem;
}

.images {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 100px;
    flex-wrap: wrap;
    margin-bottom: 5rem;
}

.image-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex: 0;
    text-align: center;
    gap: 15px;
}

.image-information {
    border: solid #1F2937;
    border-radius: 20%;
}

.quote-container {
    background-color: #e5e7eb;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 5rem;
    padding-bottom: 5rem;
    margin: -0.5rem;
}

.quote-text {
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
}

.quote-text-container {
    display: flex;
    flex-wrap: wrap;
    width: 50rem; 
}

.quote-thor {
    display: flex;
    flex: auto;
    margin-left: 31rem;
    margin-top: -1.8rem;
}

.call-container {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 3rem 10rem;
    
}

.call-prompt {
    display: flex;
    flex-direction: row;
    background-color: #3882F6;
    border-radius: 1rem;
    padding: 1rem 2rem;
    align-items: center;
    gap: 5rem;
}

.button-bottom {
    background-color: #3882F6;
    border: solid #e5e7eb;
    border-radius: 0.5rem;
    color: #e5e7eb;
    padding: 0.2rem 1rem;
    border-width: 0.15rem;
    
}

.call-text {
    color: #f9faf9 ;
}

.call-text-header {
    margin-bottom: -0.8rem;
}

